# kappa_engine

./: .clang-format  .gitignore  .gitmodules  .project.toml  CMakeLists.txt  assimp-6.0.4-zlib-1.3.2.patch  build.sh  plan.md
docs/: project_info.md
res/shaders/: colored_mesh.vert  colored_triangle.frag  colored_triangle.vert  gradient_color.comp  test.comp
src/: assets.cpp  assets.hpp  camera.hpp  common.hpp  core.cpp  core.hpp  defs.hpp  interpolator.hpp  kappa.hpp  macro.h  main.cpp  model.cpp  model.hpp  model_data.cpp  model_data.hpp  renderable.cpp  renderable.hpp  renderer.cpp  renderer.hpp  shaders.hpp  stash_list.hpp
src/assets/: ass_common.hpp  common.hpp  common.inl  internal.hpp  loader.cpp  loader.hpp  loader2.cpp  loader2.hpp  material.hpp  model.cpp  model.hpp  model.inl  model_data.cpp  model_data.hpp  model_data.inl  model_internal.hpp  model_loader.cpp  rigged_model.cpp  rigged_model.hpp  static_model.cpp  static_model.hpp  texture.cpp  texture.hpp
src/math/: aabb.hpp  calc.hpp  camera.hpp  common.hpp  common.inl  interpolator.hpp  matrix3x3.hpp  matrix3x3.inl  matrix4x4.hpp  matrix4x4.inl  quaternion.hpp  quaternion.inl  vector2.hpp  vector2.inl  vector3.hpp  vector3.inl  vector4.hpp  vector4.inl
src/physics/: particle.cpp  particle.hpp
src/render/: common.hpp  context.cpp  context.hpp  glfw.cpp  glfw.hpp  instance.cpp  instance.hpp  internal.hpp  model.cpp  model.hpp  pipeline.cpp  scene.cpp  scene.hpp  vk_common.hpp  vk_context.cpp  vk_context.hpp  vk_device.cpp  vk_device.hpp  vk_swapchain.cpp  vk_swapchain.hpp
src/render/vulkan/: .#vk_context.hpp  vk.h  vk.hpp  vk_buffer.cpp  vk_buffer.hpp  vk_common.cpp  vk_common.hpp  vk_context.cpp  vk_context.hpp  vk_device.cpp  vk_device.hpp  vk_error.hpp  vk_image.cpp  vk_image.hpp  vk_imgui.cpp  vk_imgui.hpp  vk_pipeline.cpp  vk_pipeline.hpp  vk_private.hpp  vk_swapchain.cpp  vk_swapchain.hpp  vk_util.cpp  vk_util.hpp
src/renderer/: camera.hpp  context.cpp  context.hpp  instance.cpp  instance.hpp  shaders.hpp
src/scene/: model.cpp  model.hpp  scene.hpp
src/util/: array.hpp  buffer.hpp  expected.hpp  filesystem.cpp  filesystem.hpp  free_list.hpp  freelist.hpp  function.hpp  interpolator.hpp  logger.cpp  logger.hpp  optional.hpp  ptr.hpp  string.hpp  threadpool.hpp
src_old/: core.hpp  main.cpp
src_old/assets/: common.cpp  loader.hpp  model.cpp  model_loader.hpp  rigged_model.cpp  rigged_model.hpp  spritesheet.hpp  texture.hpp
src_old/renderer/: context.hpp  shaders.cpp
src_old/scene/: model.hpp
